methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
      biscuit=true
             ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estSurBiscuit==true){
    ^SlugTracking:19: error: type mismatch;
 found   : Unit
 required: Boolean
    avance()
          ^SlugTracking:22: error: return outside method definition
  return biscuit  // Write your code here
  ^